Fixed navbar overlapping bugs

--- a/app/assets/stylesheets/show.css
+++ b/app/assets/stylesheets/show.css
@@ -7,7 +7,7 @@
   position: relative;
   min-width: 800px;
   min-height: 900px;
-  /*font-size: 36px;*/
+  margin-top: 5%;
 }
 
 .logo {
